Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UPrimitiveComponent.h

	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldCreatePhysicsState(UPrimitiveComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldRecreateProxyOnUpdateTransform(UPrimitiveComponent* Self)
	{
		return Self->ShouldRecreateProxyOnUpdateTransform();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldRenderSelected(UPrimitiveComponent* Self)
	{
		return Self->ShouldRenderSelected();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SupportsStaticLighting(UPrimitiveComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->SupportsStaticLighting_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SyncComponentToRBPhysics(UPrimitiveComponent* Self)
	{
		Self->SyncComponentToRBPhysics();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UnWeldChildren(UPrimitiveComponent* Self)
	{
		Self->UnWeldChildren();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UnWeldFromParent(UPrimitiveComponent* Self)
	{
		Self->UnWeldFromParent();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UpdatePhysicsToRBChannels(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->UpdatePhysicsToRBChannels_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UpdatePhysicsVolume(UPrimitiveComponent* Self, bool bTriggerNotifiers)
	{
		auto _p0 = bTriggerNotifiers;
		Self->UpdatePhysicsVolume(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_UsesOnlyUnlitMaterials(UPrimitiveComponent* Self)
	{
		return Self->UsesOnlyUnlitMaterials();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WakeAllRigidBodies(UPrimitiveComponent* Self)
	{
		Self->WakeAllRigidBodies();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WakeRigidBody(UPrimitiveComponent* Self, char* BoneName)
	{
		auto _p0 = ConvertFromManage_FName(BoneName);
		Self->WakeRigidBody(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WeldTo(UPrimitiveComponent* Self, USceneComponent* InParent, char* InSocketName)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(InSocketName);
		Self->WeldTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_WeldToImplementation(UPrimitiveComponent* Self, USceneComponent* InParent, char* ParentSocketName, bool bWeldSimulatedChild)
	{
		auto _p0 = InParent;
		auto _p1 = ConvertFromManage_FName(ParentSocketName);
		auto _p2 = bWeldSimulatedChild;
		return Self->WeldToImplementation(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ApplyWorldOffset(UPrimitiveComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CalcBoundingCylinder(UPrimitiveComponent* Self, float CylinderRadius, float CylinderHalfHeight)
	{
		auto _p0 = CylinderRadius;
		auto _p1 = CylinderHalfHeight;
		Self->CalcBoundingCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_CanAttachAsChild(UPrimitiveComponent* Self, USceneComponent* ChildComponent, char* SocketName)
	{
		auto _p0 = ChildComponent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		return Self->CanAttachAsChild(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_DestroyComponent(UPrimitiveComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_DetachFromComponent(UPrimitiveComponent* Self, INT_PTR DetachmentRules)
	{
		auto _p0 = *(FDetachmentTransformRules*)DetachmentRules;
		Self->DetachFromComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_DetachFromParent(UPrimitiveComponent* Self, bool bMaintainWorldPosition, bool bCallModify)
	{
		auto _p0 = bMaintainWorldPosition;
		auto _p1 = bCallModify;
		Self->DetachFromParent(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_DoesSocketExist(UPrimitiveComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return Self->DoesSocketExist(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetSocketLocation(UPrimitiveComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FVector(Self->GetSocketLocation(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetSocketQuaternion(UPrimitiveComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FQuat(Self->GetSocketQuaternion(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetSocketRotation(UPrimitiveComponent* Self, char* InSocketName)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		return (INT_PTR) new FRotator(Self->GetSocketRotation(_p0));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetSocketTransform(UPrimitiveComponent* Self, char* InSocketName, ERelativeTransformSpace TransformSpace)
	{
		auto _p0 = ConvertFromManage_FName(InSocketName);
		auto _p1 = TransformSpace;
		return (INT_PTR) new FTransform(Self->GetSocketTransform(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_HasAnySockets(UPrimitiveComponent* Self)
	{
		return Self->HasAnySockets();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsAnySimulatingPhysics(UPrimitiveComponent* Self)
	{
		return Self->IsAnySimulatingPhysics();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsPrecomputedLightingValid(UPrimitiveComponent* Self)
	{
		return Self->IsPrecomputedLightingValid();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsVisible(UPrimitiveComponent* Self)
	{
		return Self->IsVisible();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsVisibleInEditor(UPrimitiveComponent* Self)
	{
		return Self->IsVisibleInEditor();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnChildAttached(UPrimitiveComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->OnChildAttached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnChildDetached(UPrimitiveComponent* Self, USceneComponent* ChildComponent)
	{
		auto _p0 = ChildComponent;
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->OnChildDetached_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnHiddenInGameChanged(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->OnHiddenInGameChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnVisibilityChanged(UPrimitiveComponent* Self)
	{
		((E_PROTECTED_WRAP_UPrimitiveComponent*)Self)->OnVisibilityChanged_WRAP();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostNetReceive(UPrimitiveComponent* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostRepNotifies(UPrimitiveComponent* Self)
	{
		Self->PostRepNotifies();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PreNetReceive(UPrimitiveComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PropagateLightingScenarioChange(UPrimitiveComponent* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_SetRelativeScale3D(UPrimitiveComponent* Self, INT_PTR NewScale3D)
	{
		auto _p0 = *(FVector*)NewScale3D;
		Self->SetRelativeScale3D(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldCollideWhenPlacing(UPrimitiveComponent* Self)
	{
		return Self->ShouldCollideWhenPlacing();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_ShouldCreateRenderState(UPrimitiveComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_Activate(UPrimitiveComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_AddTickPrerequisiteActor(UPrimitiveComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_AddTickPrerequisiteComponent(UPrimitiveComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_Deactivate(UPrimitiveComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetComponentClassCanReplicate(UPrimitiveComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_GetReadableName(UPrimitiveComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_InitializeComponent(UPrimitiveComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsActive(UPrimitiveComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsNameStableForNetworking(UPrimitiveComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsReadyForOwnerToAutoDestroy(UPrimitiveComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_IsSupportedForNetworking(UPrimitiveComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_MarkAsEditorOnlySubobject(UPrimitiveComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_NeedsLoadForEditorGame(UPrimitiveComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_OnComponentCreated(UPrimitiveComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostInitProperties(UPrimitiveComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_PostRename(UPrimitiveComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_RemoveTickPrerequisiteActor(UPrimitiveComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_RemoveTickPrerequisiteComponent(UPrimitiveComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_RequiresGameThreadEndOfFrameRecreate(UPrimitiveComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UPrimitiveComponent_RequiresGameThreadEndOfFrameUpdates(UPrimitiveComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}